--- a/src/styles.css
+++ b/src/styles.css
@@ -1,21 +1,6 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
-
-.body-app {
-  max-width: 600px;
-  margin: 30px auto;
-  padding: 20px;
-  border: 1px solid #dadde1;
-  border-radius: 5px;
-}
-
-h1,
-h2,
-h3 {
-  margin: 0;
-}
-
 h1 {
   font-size: 24px;
   font-weight: bold;
@@ -32,8 +17,21 @@ li {
   margin: 0;
   padding: 0;
 }
+ul {
+  margin: 0;
+  padding: 0;
+}
 li a {
   text-decoration: none;
+}
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+}
+.body-app {
+  padding: 20px;
+  border: 1px solid #dadde1;
+  border-radius: 5px;
 }
 .current a {
   text-decoration: none;
