--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,16 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
+
 h1 {
   font-size: 24px;
   font-weight: bold;
   line-height: 28px;
   margin-bottom: 0;
+}
+ul {
+  margin: 0;
+  padding: 0;
 }
 li {
   list-style: none;
@@ -13,15 +18,14 @@ li {
   font-weight: 100;
   height: 19px;
   line-height: 1;
-  font-family: "Sansita", sans-serif;
   margin: 0;
   padding: 0;
 }
-ul {
-  margin: 0;
-  padding: 0;
+
+li::first-letter {
+  text-transform: capitalize;
 }
-a {
+.units a {
   text-decoration: none;
   color: #fafafa;
 }
@@ -46,62 +50,18 @@ a {
 .overview {
   margin-bottom: 20px;
 }
-.weather-temp img {
-  margin-right: 6px;
-  float: left;
-  width: 64px;
+.weather-temp {
+  margin: 0 auto;
 }
-
 .weather-temp strong {
   color: #fafafa;
   font-size: 64px;
   line-height: 1px;
-  font-weight: 400;
+  font-weight: 600;
 }
 
 .weather-temp .units {
   position: relative;
   font-size: 16px;
   top: -34px;
-}
-.current a {
-  color: blue;
-}
-.current a:hover {
-  color: #c3195d;
-  transition: all 200ms ease-in-out;
-}
-
-.cities li {
-  display: inline-block;
-  margin-right: 10px;
-  padding: 5px 5px 30px 5px;
-}
-
-.cities li a {
-  color: #fafafa;
-  font-weight: 600;
-  font-size: 12px;
-}
-.cities li a:hover {
-  color: #c3195d;
-  transition: all 200ms ease-in-out;
-}
-
-.days {
-  margin: 0 auto;
-  padding: 15px;
-}
-
-.conditions {
-  margin: 0 auto;
-  padding: 15px;
-}
-
-.footer a {
-  text-decoration: none;
-}
-.footer a:hover {
-  color: #c3195d;
-  transition: all 200ms ease-in-out;
 }
