--- a/src/styles.css
+++ b/src/styles.css
@@ -65,3 +65,10 @@ li::first-letter {
   font-size: 16px;
   top: -34px;
 }
+.weather-temp .active {
+  color: #fafafa;
+  cursor: default;
+}
+.weather-temp .active:hover {
+  text-decoration: none;
+}
