--- a/src/styles.css
+++ b/src/styles.css
@@ -21,13 +21,16 @@ li {
   margin: 0;
   padding: 0;
 }
-
+img {
+  width: 45px;
+}
 li::first-letter {
   text-transform: capitalize;
 }
 .units a {
   text-decoration: none;
-  color: #fafafa;
+  color: rgb(146, 21, 21);
+  font-weight: 600;
 }
 .weather-app-wrapper {
   max-width: 600px;
@@ -58,6 +61,7 @@ li::first-letter {
   font-size: 64px;
   line-height: 1px;
   font-weight: 600;
+  padding-left: 20px;
 }
 
 .weather-temp .units {
@@ -71,4 +75,13 @@ li::first-letter {
 }
 .weather-temp .active:hover {
   text-decoration: none;
+}
+.days div {
+  margin: 0 auto;
+  padding: 15px;
+}
+
+.conditions {
+  margin: 0 auto;
+  font-weight: 500;
 }
