--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,9 @@ h1 {
 small {
   font-weight: 500;
 }
+small a {
+  text-decoration: none;
+}
 ul {
   margin: 0;
   padding: 0;
@@ -40,17 +43,10 @@ li::first-letter {
   margin: 30px auto;
 }
 .body-app {
-  /*background-image: url("../images/1.jpg"); max-width: none;*/
+  background-image: url("../images/1.jpg");
   padding: 20px;
   border: 1px solid #dadde1;
   border-radius: 5px;
-  background: radial-gradient(
-    circle at 48.7% 44.3%,
-    rgb(30, 144, 231) 0%,
-    rgb(56, 113, 209) 22.9%,
-    rgb(38, 76, 140) 76.7%,
-    rgb(31, 63, 116) 100.2%
-  );
   color: white;
 }
 .overview {
